# pylate-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  generate_configs.py  pyproject.toml  pyproject.toml.template
.cargo/: config.toml
.github/: page.yaml
.github/workflows/: arm.yaml  cuda.yaml  page.yaml  pypi.yaml  windows_pypi.yaml
benchmark/: documents.json  main.rs  python.py  queries.json  reference.py
doc/: index.html
doc/models/answerai-colbert-small-v1/: config_sentence_transformers.json
doc/models/answerai-colbert-small-v1/1_Dense/: model.safetensors
docs/: index.html
docs/models/answerai-colbert-small-v1/: README.md  config.json  model.safetensors  modules.json  sentence_bert_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
docs/models/answerai-colbert-small-v1/1_Dense/: config.json
docs/pkg/: README.md  package.json  pylate_rs.d.ts  pylate_rs_bg.wasm  pylate_rs_bg.wasm.d.ts
index/: 0.codes.npy  0.metadata.json  0.residuals.npy  avg_residual.npy  bucket_cutoffs.npy  bucket_weights.npy  centroids.npy  doclens.0.json  ivf.npy  ivf_lengths.npy  metadata.json
src/: builder.rs  error.rs  lib.rs  model.rs  modernbert.rs  pooling.rs  python.rs  types.rs  utils.rs  wasm.rs
tests/: tests.rs
