[package]
name = "pylate-rs"
version = "1.0.3"
edition = "2021"
license = "MIT"
description = "Rust and WebAssembly library for late interaction models."
repository = "https://github.com/lightonai/pylate-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
tokenizers = { version = "0.21.1", default-features = false }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
safetensors = "0.6.0"
thiserror = "2.0.12"
anyhow = "1.0.98"


wasm-bindgen = { version = "0.2.100", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
hf-hub = { version = "0.4.3", optional = true, default-features = false, features = [
    "ureq",
    "rustls-tls",
] }
kodama = "0.3.0"
rayon = "1.10.0"
pyo3 = { version = "0.25.1", optional = true, features = ["extension-module"] }
ndarray = { version = "0.16.1", optional = true }
numpy = { version = "0.25.0", optional = true }

[features]
default = ["tokenizers/onig", "hf-hub"]

wasm = [
    "dep:wasm-bindgen",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:getrandom",
    "tokenizers/unstable_wasm",
]

python = ["pyo3", "ndarray", "numpy"]

metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]


[profile.release]
opt-level = 2
lto = true

[[bin]]
name = "benchmark"
path = "benchmark/main.rs"
